make changes for cross-compilation
Signed-off-by: Vincent-FK <vincent.buso@funkey-project.com>

--- a/configure.in
+++ b/configure.in
@@ -21,12 +21,6 @@ AC_MSG_ERROR(your system must support either usleep or select)
 
 
 
-LIBS="$LIBS -L/usr/local/lib -L/usr/X11R6/lib"
-
-
-
-
-
 AC_ARG_WITH(fb,      [  --with-fb               build framebuffer device interface], [], [with_fb=yes])
 AC_ARG_WITH(svgalib, [  --with-svgalib          build Linux svgalib interface], [], [with_svgalib=yes])
 AC_ARG_WITH(sdl,     [  --with-sdl              build SDL interface], [], [with_sdl=yes])
@@ -79,8 +73,8 @@ fi
 if test "$with_sdl" != "no" ; then
 AC_CHECK_PROG(SDL_CONFIG, sdl-config, yes)
 if test "$SDL_CONFIG" ; then
-SDL_LIBS="`sdl-config --libs`"
-SDL_CFLAGS="`sdl-config --cflags`"
+SDL_LIBS="`$SDL_CONFIG --libs`"
+SDL_CFLAGS="`$SDL_CONFIG --cflags`"
 old_incs="$INCS"
 INCS="$INCS $SDL_CFLAGS"
 AC_CHECK_LIB(SDL, SDL_Init, [
