--- a/Makefile.in
+++ b/Makefile.in
@@ -18,7 +18,7 @@ ASM_OBJS = @ASM_OBJS@
 
 SYS_DEFS = @DEFS@ @ENDIAN@ @ASM@ @SYS_DEFS@
 SYS_OBJS = sys/nix/nix.o $(ASM_OBJS)
-SYS_INCS = -I/usr/local/include @XINCS@ -I./sys/nix
+SYS_INCS = -I./sys/nix
 
 FB_OBJS = @FB_OBJS@ @JOY@ @SOUND@
 FB_LIBS = 
